2008-11-14  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* VERSION: Set to 2.0.0.beta3.SVN.

2008-11-14  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the 2.0-beta2 release.

	* VERSION: Set to 2.0.0.beta2.

	* MANIFEST: Updated.

	* CHANGES: Updated.

2008-11-14  Michael Wiegand <michael.wiegand@intevation.de>

	* openvas.tmpl.in, openvas-adduser.in, openvas-mkcert-client.in,
	openvas-rmuser.in: Added datarootdir to remove configure warning and to
	be compatible with autoconf 2.60 (see
	http://www.gnu.org/software/libtool/manual/autoconf/Changed-Directory-Variables.html).

2008-11-14  Michael Wiegand <michael.wiegand@intevation.de>

	Applying patch provided by Stjepan Gros to update Makefile target and
	to improve code readability.

	* openvasd/openvasd.c (init_openvasd): Minor reformattings.

	* openvasd/Makefile: Remove openvasd-config when distclean target
	is invoked.

2008-11-14  Michael Wiegand <michael.wiegand@intevation.de>

	Applying patch provided by Stjepan Gros to eliminate compiler warnings.

	* openvasd/oval_plugins.c (oval_plugin_add, ovaldi_launch): Minor
	reformattings, changes to eliminate compiler warnings.

	* openvasd/otp_1_0.c (otp_1_0_server_send_certificates): Casting to
	eliminate compiler warning.

2008-11-14  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c (ovaldi_launch): Re-added G_SPAWN_SEARCH_PATH
	flag to g_spawn_sync call since it was lost in rev 1703.

2008-11-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/otp_1_0.c (otp_1_0_server_send_certificates) : closed mem 
	leak.

2008-11-12  Michael Wiegand <michael.wiegand@intevation.de>

	Applying patch provided by Stjepan Gros to improve 64-bit cleanliness.

	* openvasd/nasl_plugins.c, openvasd/ntp_11.c, openvasd/attack.c,
	openvasd/save_kb.c, openvasd/openvasd.c, openvasd/nes_plugins.c,
	openvasd/pluginload.c, openvasd/save_tests.c, openvasd/comm.c,